@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-04-30 AP         Fix Explain issue with multiple lines [Miha Redej]
 2006-04-30 AP         Scripting for view SELECT/INSERT/UPDATE
 2006-04-30 AP         Scripting for table SELECT/INSERT/UPDATE
 2006-04-30 AP         cleanup submenu handling to avoid touching events.cpp when menus are added
